Login, registro, POST y GET a usuarios desde front//Falta mejorar estetica

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="#">Ofertas</a>
       <a href="#">Contacto</a>
     </nav>
+    <button id="logout-btn">Cerrar sesión</button>
   </div>
 </header>
 
@@ -26,12 +27,6 @@
       <p>Productos de calidad con estilo y elegancia.</p>
     </div>
   </section>
-
-    <!-- Producto -->
-  <section class="product-grid">
-    <!-- Productos -->
-  </section>
-
 </main>
 
 <footer class="main-footer">
