Cuando se crea un usuario se crea automaticamente su carrito vacio. Modificado carrito en el back

--- a/registro.html
+++ b/registro.html
@@ -15,6 +15,24 @@
         <input type="email" id="email" placeholder="Correo electrónico" required />
         <input type="password" id="contrasena" placeholder="Contraseña" required />
         <input type="password" id="contrasena2" placeholder="Repetir contraseña" required />
+        <label for="pais">País</label>
+        <select id="pais" required>
+            <option value="">Seleccioná tu país</option>
+            <option value="Argentina">Argentina</option>
+            <option value="China">Bolivia</option>
+            <option value="Ecuador">Brasil</option>
+            <option value="Noruega">Chile</option>
+            <option value="EEUU">Colombia</option>
+            <option value="Alemania">Ecuador</option>
+            <option value="México">México</option>
+            <option value="Australia">Paraguay</option>
+            <option value="Perú">Perú</option>
+            <option value="Francia">Uruguay</option>
+            <option value="Venezuela">Venezuela</option>
+        </select>
+
+        <br>
+        <br>
         <button type="submit">Registrarse</button>
     </form>
     <p>¿Ya tenés cuenta? <a href="login.html">Iniciar sesión</a></p>
