--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tienda Elegante</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Tienda Elegante</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 <header class="main-header">
-  <div class="container">
-    <h1 class="logo">Tienda Sofisticada</h1>
-    <nav class="navbar">
-      <a href="#">Inicio</a>
-      <a href="#">Productos</a>
-      <a href="#">Ofertas</a>
-      <a href="#">Contacto</a>
-      <button id="logout-btn">Cerrar sesión</button>
-    </nav>
-  </div>
+    <div class="container">
+        <h1 class="logo">Tienda Sofisticada</h1>
+        <nav class="navbar">
+            <a href="#">Inicio</a>
+            <a href="#">Productos</a>
+            <a href="#">Nuevo producto</a>
+            <button id="logout-btn" type="button">Cerrar sesión</button>
+        </nav>
+    </div>
 </header>
 
 <main class="main-content">
-  <section class="hero">
-    <div class="hero-text">
-      <h2>Descubre lo mejor para vos</h2>
-      <p>Productos de calidad con estilo y elegancia.</p>
-    </div>
-  </section>
-</main>
+    <section class="hero">
+        <div class="hero-text">
+            <h2>Descubre lo mejor para vos</h2>
+            <p>Productos de calidad con estilo y elegancia.</p>
+        </div>
+    </section>
 
+</main>
+<button id="toggle-cart-btn" title="Ver carrito">🛒</button>
+<aside id="cart-slider">
+    <h2>Tu carrito</h2>
+    <div id="cart-items"></div>
+    <button id="checkout-btn" type="button">Finalizar compra</button>
+</aside>
 <footer class="main-footer">
-  <p>&copy; 2025 Tienda Sofisticada. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Tienda Sofisticada. Todos los derechos reservados.</p>
 </footer>
 
 <script src="app.js"></script>
