--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#">Inicio</a>
             <a href="#">Productos</a>
             <a href="#">Nuevo producto</a>
+            <a href="#">Reportes</a>
             <button id="logout-btn" type="button">Cerrar sesión</button>
         </nav>
     </div>
@@ -37,7 +38,7 @@
 <footer class="main-footer">
     <p>&copy; 2025 Tienda Sofisticada. Todos los derechos reservados.</p>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
