--- a/registro.html
+++ b/registro.html
@@ -19,15 +19,15 @@
         <select id="pais" required>
             <option value="">Seleccioná tu país</option>
             <option value="Argentina">Argentina</option>
-            <option value="China">Bolivia</option>
-            <option value="Ecuador">Brasil</option>
-            <option value="Noruega">Chile</option>
-            <option value="EEUU">Colombia</option>
-            <option value="Alemania">Ecuador</option>
+            <option value="China">China</option>
+            <option value="Ecuador">Ecuador</option>
+            <option value="Noruega">Noruega</option>
+            <option value="EEUU">EEUU</option>
+            <option value="Alemania">Alemania</option>
             <option value="México">México</option>
-            <option value="Australia">Paraguay</option>
+            <option value="Australia">Australia</option>
             <option value="Perú">Perú</option>
-            <option value="Francia">Uruguay</option>
+            <option value="Francia">Francia</option>
             <option value="Venezuela">Venezuela</option>
         </select>
 
