--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav class="navbar">
             <a href="#">Inicio</a>
             <a href="#">Productos</a>
-            <a href="#">Nuevo producto</a>
-            <a href="#">Reportes</a>
+            <a href="#" class="renderIsAdmin" style="display: none;">Nuevo producto</a>
+            <a href="#" class="renderIsAdmin" style="display: none;">Reportes</a>
             <button id="logout-btn" type="button">Cerrar sesión</button>
         </nav>
     </div>
